--- a/game.html
+++ b/game.html
@@ -1,4 +1,3 @@
-
 <div>
     <img src="me.png" style="display: none;" id="scream"/>
     <img src="cloud.png" style="display: none;" id="cloud"/>
@@ -190,7 +189,13 @@
             object.centerX += object.speedX;
             object.centerY += object.speedY;
         }
-        
+        var img = document.getElementById("scream");
+        var imgCloud = document.getElementById("cloud");
+        ctx.drawImage(img, player.x, player.y, player.width, player.height);
+        ctx.drawImage(imgCloud, cloud.x, cloud.y, cloud.width, cloud.height);
+        cloud.x = cloud.x + cloud.speedX;
+        if (cloud.x > container.width) {
+            cloud.x = (cloud.width * -1) - 20;
         }
         ctx.font = config.font;
         ctx.fillStyle = config.fontColor;
